Fixed welcome screen on mobile

--- a/src/components/Welcome/style.scss
+++ b/src/components/Welcome/style.scss
@@ -1,12 +1,16 @@
 .welcome {
   height: 100vh;
+  text-align: left;
+  margin-left: 25px;
+  margin-right: 25px;
+  width: 100%;
 }
 
 .brand {
   position: relative;
-  width: 75%;
-  margin: 100px 0px 0px 50px;
-  height: 100px;
+  width: 100%;
+  margin-top: 10%;
+  margin-right: 10%;
 
   h1 {
     display: inline-block;
@@ -25,8 +29,8 @@
 
 .tagline {
   display: inline-block;
-  margin-left: 75px;
-  margin-top: 25px;
+  width: 100%;
+  margin: 25px;
   font-size: 22px;
 }
 
@@ -38,11 +42,10 @@
   border-radius: 25px;
   width: 180px;
   height: 25px;
-  margin-left: 100px;
-  margin-top: 75px;
+  margin: 25px;
   padding: 10px;
   cursor: pointer;
-  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .welcome a {
@@ -53,22 +56,42 @@
   font-size: 18px;
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 450px) {
   .welcome {
+    margin-left: 0px;
+    margin-top: 50px;
+  }
+  .brand {
+    margin: 0;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .welcome {
+    margin-left: 0px;
+    margin-top: 50px;
     text-align: center;
   }
-
   .brand {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 50px;
-    .logo {
-      margin-left: 35%;
+    margin: 0;
+    width: 100%;
+    h1 {
+      margin-left: 10px;
+    }
+    img {
+      margin-left: 40%;
+      margin-bottom: 10%;
     }
   }
+  .signup-link {
+    width: 40%;
+    margin-left: 28%;
+  }
   .tagline {
-    display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 100%;
+    margin: 0;
+
+    p {
+      margin: 10px;
+    }
   }
 }
