--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@ body {
 .container {
   padding: 0px;
   margin: 0px;
+  overflow: auto;
 }
 
 a { text-decoration: none !important}
